[package]
edition = "2021"
name = "reaper-imgui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_str_macro = "1.0"
# stringify = "1"
once_cell = "1.16"
quote = "1.0"
reaper-low = "0.1.0"
regex = "1.7"

[patch.crates-io]
reaper-low = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}

[lib]
crate-type = ["lib"]
