[package]
authors = ["Timofei Kazantsev aka Levitanus <pianoist@ya.ru>"]
description = "Unsafe bindings to ReaImGui Reaper extension."
edition = "2021"
license = "LGPL-3.0"
name = "reaper-imgui"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_str_macro = "1.0"
rea-rs-low = "0.1.2"

[build-dependencies]
once_cell = "1.16"
quote = "1.0"
regex = "1.7"
reqwest = {version = "0.11", features = ["blocking", "json"]}

[dev-dependencies]
rea-rs = "0.1.2"
rea-rs-macros = "0.1.2"

[lib]
crate-type = ["lib"]
