[package]
edition = "2021"
name = "reaper-imgui-hello-world"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_str_macro = "1.0"
rea-rs = {git = "https://github.com/Levitanus/rea-rs"}
reaper-imgui = {path = "../"}
reaper-low = "0.1.0"
reaper-macros = "0.1.0"
reaper-medium = "0.1.0"

[patch.crates-io]
reaper-low = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-macros = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-medium = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}

[lib]
# crate-type = ["lib"]
crate-type = ["cdylib"]
name = "reaper_imgui_example"
