[package]
edition = "2021"
name = "reaper-imgui-hello-world"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_str_macro = "1.0"
rea-rs = "0.1.2"
rea-rs-low = "0.1.2"
rea-rs-macros = "0.1.2"
reaper-imgui = {version = "0.1.2", path = "../reaper-imgui"}

[lib]
# crate-type = ["lib"]
crate-type = ["cdylib"]
name = "reaper_imgui_example"
