[package]
authors = ["Timofei Kazantsev aka Levitanus <pianoist@ya.ru>"]
description = "Unsafe bindings to ReaImGui Reaper extension."
edition = "2021"
license = "LGPL-3.0"
name = "reaper-imgui"
readme = "README.md"
repository = "https://github.com/Levitanus/reaper-imgui"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
c_str_macro = "1.0"
# image = "0.24.5"
rea-rs-low = {version = "0.1.3", path = "../../rea-rs-workspace/low"}
serde = {version = "1.0", features = ["derive"]}
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "serde"]}

[build-dependencies]
once_cell = "1.16"
quote = "1.0"
regex = "1.7"
reqwest = {version = "0.11", features = ["blocking"]}

[dev-dependencies]
rea-rs = {version = "0.1.3", path = "../../rea-rs-workspace/rea-rs"}
rea-rs-macros = {version = "0.1.3", path = "../../rea-rs-workspace/macros"}

[lib]
crate-type = ["lib"]
